<resources>
    <string name="app_name">Youpeng</string>
    <!-- Strings related to login -->
    <string name="user_name">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="password_confirm">Password_confirm</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_friends">Friends</string>
    <string name="title_groups">Groups</string>
    <string name="title_me">Me</string>
</resources>
